--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,57 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+    font-family: robo;
+    src: url(assets/roboto-condensed.light.ttf);
+    font-weight: 800;
+}
+@font-face {
+    font-family: ecob;
+    src: url(assets/economica-bold.ttf);
+}
+p{
+    margin: 2px;
+}
+body{
+    font-size: 18px;
+    padding: 2.5%;
+    font-family: robo;
+}
+h1,h2,h3,h4{
+    font-family: ecob;
+}
+.strategyDiv{
+    display: inline-block;
+    border-style: solid;
+    border-width: 1px;
+    padding: 10px;
+    margin: 3px;
+}
+.childrenContainer{
+    border-style: solid;
+    border-width: 1px;
+    padding: 10px;
+    margin: 3px;
+}
+.profile{
+    width: 100px;
+    border-radius: 50px;
+}
+.title-fade-out{
+    opacity:0;
+    animation-name: fade-out;
+    animation-duration: 2s;
+}
+.title-fade-in{
+    opacity: 100;
+    animation-name: fade-in;
+    animation-duration: 2s;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@keyframes fade-out {
+    from{ opacity: 100}
+    to{opacity: 0}
+    
+}
+@keyframes fade-in {
+    from{ opacity: 0}
+    to{opacity: 100}
 }
